<resources>
    <string name="app_name">TaskTechStalwarts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_for_everyone">Food for \nEveryone</string>
    <string name="get_started">Get starteed</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign-up</string>
    <string name="email_add">Email address</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot passcode?</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_pass">Enter your password</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="profile">Profile</string>
    <string name="delicious_food_for_you">Delicious\nfood for you</string>
    <string name="best_seller">Best Seller</string>
    <string name="search">Search</string>
    <string name="delivery_info">Delivery info</string>
    <string name="return_policy">Return policy</string>
    <string name="cart">Cart</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="complete_order">Complete order</string>
</resources>